# matty_web

./: README.md  privacy_policy.txt  pyproject.toml  terms_of_service.txt
frontend/matty_web-frontend/: README.md  package-lock.json  package.json
frontend/matty_web-frontend/src/: main.js
frontend/matty_web-frontend/src/views/: Login.vue
src/matty_web/: admin.py  app.py  conf.toml  models.py  utils.py  views.py
src/matty_web/static/css/: custom.css
src/matty_web/templates/: edit_profile.html  index.html  login.html  navbar.html  profile.html
test/unit/: test_models.py  test_utils.py  test_views.py
