
[project]
name = "matty_web"
version = "0.1.0"
description = "Abaqus Material Library on WEB"
authors = [
    {name = "Eric", email = "eric@simutech.com.tw"},
]
dependencies = [
    "flask>=2.3.2",
    "flask-admin>=1.6.1",
    "peewee>=3.16.2",
    "wtf-peewee>=3.0.4",
    "bcrypt>=4.0.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.3.1",
]
